Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3425

Using create mode (e.g. for x-bindings) with standard exchanges does not work

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.10, 0.12
    • 0.13
    • C++ Client
    • None

    Description

      E.g. use the following with spout (where my-queue already exists):

      amq.direct;{create: always, node:{type: topic, x-bindings:[

      {exchange:'amq.direct', queue: 'my-queue', key: 'key' }

      ]}}

      results in:

      Create failed for exchange amq.direct; not-allowed: not-allowed: Exchange names beginning with "amq." or "qpid." are reserved. (exchange="amq.direct")

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: