QPID-3425: Special handling of reserved exchange names in auto-create

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1158370 13f79535-47bb-0310-9956-ffa450edef68